printBoxFunktion und Makefile aktualisiert

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "random": "cpp",
         "string": "cpp",
         "sstream": "cpp",
-        "optional": "cpp"
+        "optional": "cpp",
+        "iomanip": "cpp"
     }
 }
