--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,8 @@
         "string": "cpp",
         "sstream": "cpp",
         "optional": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "xlocmon": "cpp",
+        "xloctime": "cpp"
     }
 }
